--- a/MyWebApp/src/main/webapp/WEB-INF/web.xml
+++ b/MyWebApp/src/main/webapp/WEB-INF/web.xml
@@ -4,23 +4,6 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
                              http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <!-- Example servlet mapping -->
-    <!--
-    <servlet>
-        <servlet-name>HelloWorldServlet</servlet-name>
-        <servlet-class>com.example.HelloWorldServlet</servlet-class>
-    </servlet>
-    
-    <servlet-mapping>
-        <servlet-name>HelloWorldServlet</servlet-name>
-        <url-pattern>/hello</url-pattern>
-    </servlet-mapping>
-    -->
-
-    <!-- Example welcome file -->
-    <!--
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-    -->
+    <!-- Add necessary configurations for your web application -->
+    <!-- Servlet mappings, filters, etc. -->
 </web-app>
